[workspace]
resolver = "3"
members = ["linker", "lunaris_api", "lunaris_core", "plugins/*/*", "tools/*"]
default-members = ["lunaris_api", "lunaris_core", "plugins/*/*"]

[workspace.package]
authors = ["shuntia<shuntia@shuntia.net>"]
edition = "2024"

[workspace.dependencies]
bevy_ecs = "0.16.1"
egui = "0.32.3"
fluent = "0.17.0"
futures = "0.3.31"
inventory = "0.3.21"
linker = { path = "linker" }
lunaris_api = { path = "lunaris_api" }
slab = "0.4.11"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "26.0.1"

[workspace.dependencies.serde]
version = "1.0.226"
features = ["derive"]
