[workspace]
resolver = "3"
members = ["linker", "lunaris_api", "lunaris_core", "lunaris_ecs", "plugins/*/*", "tools/*"]
default-members = ["lunaris_api", "lunaris_core", "plugins/*/*"]

[workspace.package]
authors = ["shuntia<shuntia@shuntia.net>"]
edition = "2024"

[workspace.dependencies]
bevy_ecs = "0.17.2"
egui = "0.33.0"
fluent = "0.17.0"
futures = "0.3.31"
inventory = "0.3.21"
linker = { path = "linker" }
lunaris_api = { path = "lunaris_api" }
lunaris_ecs = { path = "lunaris_ecs" }
slab = "0.4.11"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "27.0.1"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]
