[workspace]
resolver = "3"
members = ["crates/lunaris_linker", "crates/lunaris_api", "crates/lunaris_runtime", "bin/lunaris", "crates/lunaris_ecs", "crates/lunaris_ecs/derive", "plugins/*/*", "tools/*"]
default-members = ["crates/lunaris_api", "bin/lunaris", "plugins/*/*"]

[workspace.package]
authors = ["shuntia<shuntia@shuntia.net>"]
edition = "2024"

[workspace.dependencies]
bevy_ecs = "0.17.3"
egui = "0.33.2"
fluent = "0.17.0"
futures = "0.3.31"
inventory = "0.3.21"
lunaris_linker = { path = "crates/lunaris_linker", version = "0.1.0" }
lunaris_api = { path = "crates/lunaris_api", version = "0.1.0" }
lunaris_ecs = { path = "crates/lunaris_ecs", version = "0.1.0" }
slab = "0.4.11"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wgpu = "27.0.1"
serde={version = "1.0.228", features = ["derive"]}
